Closed Bug 1748989 Opened 3 years ago Closed 3 years ago

Perma /builds/worker/checkouts/gecko/gfx/layers/NativeLayerCA.mm:1266:20: error: no member named 'gfx_core_animation_specialize_video_check_color_space' in namespace 'mozilla::StaticPrefs' when Gecko 97 merges to Beta on 2022-01-10

Categories

(Core :: Graphics: Layers, defect)

defect

Tracking

()

VERIFIED FIXED
97 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox95 --- unaffected
firefox96 --- unaffected
firefox97 blocking verified

People

(Reporter: noriszfay, Assigned: bradwerth)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Central-as-beta simulation
How to run these simulations

Failure log:

[task 2022-01-07T11:01:56.483Z] 11:01:56     INFO -  In file included from Unified_mm_gfx_layers0.mm:2:
[task 2022-01-07T11:01:56.484Z] 11:01:56    ERROR -  /builds/worker/checkouts/gecko/gfx/layers/NativeLayerCA.mm:1266:20: error: no member named 'gfx_core_animation_specialize_video_check_color_space' in namespace 'mozilla::StaticPrefs'
[task 2022-01-07T11:01:56.485Z] 11:01:56     INFO -    if (StaticPrefs::gfx_core_animation_specialize_video_check_color_space()) {
[task 2022-01-07T11:01:56.486Z] 11:01:56     INFO -        ~~~~~~~~~~~~~^
[task 2022-01-07T11:01:56.487Z] 11:01:56    ERROR -  /builds/worker/checkouts/gecko/gfx/layers/NativeLayerCA.mm:1306:20: error: no member named 'gfx_core_animation_specialize_video_log' in namespace 'mozilla::StaticPrefs'; did you mean 'gfx_core_animation_specialize_video'?
[task 2022-01-07T11:01:56.488Z] 11:01:56     INFO -    if (StaticPrefs::gfx_core_animation_specialize_video_log()) {
[task 2022-01-07T11:01:56.489Z] 11:01:56     INFO -        ~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2022-01-07T11:01:56.490Z] 11:01:56     INFO -                     gfx_core_animation_specialize_video
[task 2022-01-07T11:01:56.491Z] 11:01:56     INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/StaticPrefList_gfx.h:153:4: note: 'gfx_core_animation_specialize_video' declared here
[task 2022-01-07T11:01:56.492Z] 11:01:56     INFO -     gfx_core_animation_specialize_video,
[task 2022-01-07T11:01:56.493Z] 11:01:56     INFO -     ^
[task 2022-01-07T11:01:56.494Z] 11:01:56     INFO -  In file included from Unified_mm_gfx_layers0.mm:2:
[task 2022-01-07T11:01:56.495Z] 11:01:56    ERROR -  /builds/worker/checkouts/gecko/gfx/layers/NativeLayerCA.mm:1312:35: error: no member named 'gfx_core_animation_specialize_video_spoof_timing' in namespace 'mozilla::StaticPrefs'; did you mean 'gfx_core_animation_specialize_video'?
[task 2022-01-07T11:01:56.496Z] 11:01:56     INFO -    bool spoofTiming = StaticPrefs::gfx_core_animation_specialize_video_spoof_timing();
[task 2022-01-07T11:01:56.497Z] 11:01:56     INFO -                       ~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2022-01-07T11:01:56.498Z] 11:01:56     INFO -                                    gfx_core_animation_specialize_video
[task 2022-01-07T11:01:56.499Z] 11:01:56     INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/StaticPrefList_gfx.h:153:4: note: 'gfx_core_animation_specialize_video' declared here
[task 2022-01-07T11:01:56.500Z] 11:01:56     INFO -     gfx_core_animation_specialize_video,
[task 2022-01-07T11:01:56.501Z] 11:01:56     INFO -     ^
[task 2022-01-07T11:01:56.502Z] 11:01:56     INFO -  3 errors generated.
[task 2022-01-07T11:01:56.503Z] 11:01:56    ERROR -  gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:669: Unified_mm_gfx_layers0.o] Error 1
[task 2022-01-07T11:01:56.504Z] 11:01:56     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/gfx/layers'
[task 2022-01-07T11:01:56.505Z] 11:01:56     INFO -  gmake[4]: *** Waiting for unfinished jobs....
Flags: needinfo?(bwerth)

The code that references these new prefs landed in Bug 1746711 which also updated StaticPrefs.yaml. As long as the yaml travels with the code, this merge should work fine.

Flags: needinfo?(bwerth)

The preferences don't exist outside Nightly, hence the methods are missing. Either the ifdef for the nightly build in the StaticPrefs.yaml needs to go or the callers also need to be ifdef-ed.

Flags: needinfo?(bwerth)

(In reply to Sebastian Hengst [:aryx] (needinfo me if it's about an intermittent or backout) from comment #2)

The preferences don't exist outside Nightly, hence the methods are missing. Either the ifdef for the nightly build in the StaticPrefs.yaml needs to go or the callers also need to be ifdef-ed.

Of course, thank you. I'll fix the callers.

Flags: needinfo?(bwerth)

This code was left unprotected when it landed. The prefs only exist in
Nightly, so they generated compile-time errors without these changes.

Assignee: nobody → bwerth
Status: NEW → ASSIGNED
Pushed by bwerth@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/cd56ada93692 Protect Nightly-only video layer pref code with ifdefs. r=gfx-reviewers,jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 97 Branch

Verified fixed in today's central-as-early-beta simulation.

Status: RESOLVED → VERIFIED
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: