Bug 1748989: Protect Nightly-only video layer pref code with ifdefs. r=gfx-reviewers,jrmuizel

This code was left unprotected when it landed. The prefs only exist in
Nightly, so they generated compile-time errors without these changes.

Differential Revision: https://phabricator.services.mozilla.com/D135395